noinst_LTLIBRARIES=libcolib.la
include_HEADERS=          \
	co_closure.h          \
	co_epoll.h            \
	co_routine.h          \
	co_routine_inner.h    \
	co_routine_specific.h \
	coctx.h
libcolib_la_SOURCES=      \
	co_epoll.cpp          \
	co_hook_sys_call.cpp  \
	co_routine.cpp        \
	coctx.cpp             \
	coctx_swap.S